<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="gift_app_name">KakaoGift</string>
    <string name="idcard_info">请您协助提供正确的第二代居民身份证件信息，如因身份证信息有误导致我们无法发货和报关造成的损失，将由您自己承担。</string>
    <string name="forget">找回密码</string>
    <string name="phone_regist">手机注册</string>
    <string name="go_login"><u>去登录</u></string>
    <string name="phone_num">手机号</string>
    <string name="zhanghao">账号</string>
    <string name="pwd">密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="besure_pwd">确认密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_do">6-12位字母／数字组合</string>
    <string name="input_pwd_agin">再次填写密码</string>
    <string name="input_code">短信验证码</string>
    <string name="new_pwd">新密码</string>
    <string name="get_code">获取验证码</string>
    <string name="yanzhengma">验证码</string>
    <string name="about_id_card">    ·我在韩秘美购物为什么需要客户提交身份证信息？\n\n    您好，因为您购买的是国外商品，商品送到您手中需要经过海关报关流程，根据国家法规规定国外商品进入中国是需要您提供身份证信息来完成报关的。请您放心，我们会妥善处理与保管您的身份证信息，仅用于商品清关时使用。 若您有疑惑可以查看相应的国家法律条款信息： 详情点击查看：http://www.customs.gov.cn/publish/portal0/tab517/info265077.htm。
\n\n    ·我填写的收货人信息是错误的，怎么上传身份证信息？\n\n   建议您可以拨打韩秘美400免费热线：400-843-2288 周一到周日 09：00-18：00，我们会帮助您协商处理。</string>
    <string name="tishi">1.海关需要对海外购物查验身份信息，错误信息可能导致无法通关。\n2.身份信息将加密报关，韩秘美将保证您的信息安全。</string>
    <string name="price">¥ %1$s</string>
    <string name="price_src">¥%1$s</string>
    <string name="price01">¥%1$s起售</string>
    <string name="discount">%1$s折</string>
    <string name="shui">税率:%1$s％</string>
    <string name="error">网络连接异常</string>
    <string name="restrictAmount">限购%1$s件</string>
    <string name="shipFee">运费:¥%1$s</string>
    <string name="postalFee">行邮税:¥%1$s</string>
    <string name="buyNum">购买数量:%1$s件</string>
    <string name="all_money">总金额:¥ %1$s</string>
    <string name="submit_order">提交订单</string>
    <string name="name">姓名：%1$s</string>
    <string name="phone">联系电话：%1$s</string>
    <string name="address">收货地址：%1$s</string>
    <string name="idcard">身份证号：%1$s</string>
    <string name="yuanguanshui">原行邮税¥%1$s(≤%2$s,免税)</string>
    <string name="sel_max">您最多可提供数量为%1$s个</string>
    <string name="upload">您最多上传3张 每张不超过5M,支持JPG,BMP,PNG</string>
    <string name="num">数量:%1$s</string>
    <string name="portalfee_biaozhun">本商品适用税率为%1$s％，若该保税仓总税额≤%2$s则免征(税额＝单价 x 数量 x 税率)。</string>
    <string name="portalfee_free">包邮包税</string>
    <string name="pay_type_jd">JD</string>
    <string name="pay_type_ali">APAY</string>
    <string name="pay_type_wx">WEIXIN</string>
    <string name="now_go">立即查看</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="order_attention">注意：订单超过24小时，系统会自动取消。请尽快支付！</string>
    <string name="top">顶部</string>
    <string name="sucess_goodscar">商品已成功添加入购物车</string>
    <string name="kouling">复制链接</string>
    <string name="pingou_remind">支持开团并邀请%1$s参团，人数不足自动退款，详见下方拼团玩法</string>
    <string name="today_pingou">今日拼购 GROUP PURCHASE</string>
    <string name="no_order">您还没有相关的订单</string>
    <string name="zhekoulv">折扣率：</string>
    <string name="pingoudazhe">拼购打折</string>
    <string name="send_yan_to_phone">我们将发送验证码到你的手机。</string>
    <string name="edit_user_info">1.字符个数应在2-12位之间\n2.与KakaoGift有冲突的昵称，KakaoGift将保留收回的权利\n3.创建或更改昵称，请遵守相关法律法规</string>
    <string name="regist_agree_us">注册即视为同意 韩秘美服务条款</string>
    <string name="regist_agree_us02"><u>韩秘美隐私条款</u></string>
    <string name="regist_agree_us_key">韩秘美服务条款</string>
    <string name="submit">提交</string>
    <string name="submit_loading">提交中...</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_error">提交失败</string>
    <string name="see_order">查看订单详情</string>
    <string name="see_tuan">查看团详情</string>
    <string name="tuan_gui">%1$s人团：¥%2$s</string>
    <string name="pingou_over_notice">该活动已结束，去看看其他拼购吧</string>
    <string name="xiadan_01">立即下单</string>
    <string name="pingou_fail_notice">拼购失败,资金会在1-5个工作日内退回您的账户</string>
    <string name="goods_over_notice">该商品尚未开售或已下架，去看看其他商品吧</string>

    <string name="current_version">当前版本：%1$s</string>
    <string name="comment">商品评价(%1$s)</string>
    <string name="comment_good">好评率%1$s</string>
    
    <string name="tab_one">首页</string>
    <string name="tab_two">购物车</string>
	<string name="tab_three">我的</string>
	<string name="wuliu_noinfo">此快递单号暂未获取到物流信息\n请稍候再查</string>
	
	<!-- gallery -->
    <string name="folder_all">所有照片</string>
    <string name="preview">选中</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
	
	<string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	
	 <!-- 获取 Token -->
    <string name="weibosdk_demo_obtain_token_via_signature">通过应用签名信息获取 Token</string>
    <string name="weibosdk_demo_obtain_token_via_sso">通过单点登录 (SSO) 获取 Token</string>
    <string name="weibosdk_demo_obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="weibosdk_demo_obtain_token_via_code_hint"><b>请注意：</b>基于以下几点原因，您可能不想使用前面的两种授权方式：\n<li>出于安全性的考虑，您不信任目前使用应用的包名和签名来获取 Token 的方式</li>\n<li>您不想安装微博客户端</li>\n您可以自行通过 Code 来获取 Token。通过这种方式需要使用到 APP_SECRET，请务必妥善保管好自己的 APP_SECRET，<b>不要直接暴露在程序中，泄露有风险</b>。\n<b>更多细节请查看：</b><a href="http://open.weibo.com/wiki/%E6%8E%88%E6%9D%83%E6%9C%BA%E5%88%B6%E8%AF%B4%E6%98%8E#Web.E5.BA.94.E7.94.A8.E7.9A.84.E9.AA.8C.E8.AF.81.E6.8E.88.E6.9D.83">验证授权步骤</a></string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>    
     <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
</resources>
