<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background"
    android:fitsSystemWindows="true" >
     <TextView 
         android:paddingTop="3dp"
         android:paddingBottom="3dp"
        android:paddingLeft="15dp"
        android:id="@+id/attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@null"
        android:textSize="12sp"
        android:textColor="@color/theme"
        android:visibility="invisible"
        android:background="#ffeedd"/>
   <LinearLayout 
          android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/phone_num"
            android:textSize="16sp"
            android:textColor="@color/fontcolor"
            android:gravity="center"/>
        <EditText 
            android:id="@+id/phone_num"
            android:maxLength="11"
            android:inputType="number"
            android:hint="@string/input_phone"
            style="@style/login_edit_style"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"/>
    </LinearLayout>
    <View 
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:background="@color/qianhui"/>
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/yanzhengma"
            android:textSize="16sp"
            android:textColor="@color/fontcolor"
            android:gravity="center"/>
        <EditText 
            android:id="@+id/yanzheng"
            android:maxLength="8"
            android:inputType="number|textCapCharacters"
            android:hint="@string/input_code"
            style="@style/login_edit_style"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:background="@null"/>
        <View 
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/qianhui"/>
        <com.kakao.kakaogift.view.YanZhengCodeTextView
       	 	 android:id="@+id/get_yanzheng"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:text="@string/get_code"
            android:textSize="14sp"
            android:textColor="@color/huise"
            android:gravity="center" /> 

    </LinearLayout>
      <LinearLayout 
          android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/set_pwd"
            android:textSize="16sp"
            android:textColor="@color/fontcolor"
            android:gravity="center"/>
        <EditText 
            android:id="@+id/pwd"
            android:paddingTop="5dp"
            android:maxLength="12"
            style="@style/login_edit_style"
            android:hint="@string/input_pwd_do"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"/>
    </LinearLayout>
    <!-- 
    <View 
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:background="@color/qianhui"/>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/besure_pwd"
            android:textSize="16sp"
            android:textColor="@color/fontcolor"
            android:gravity="center"/>
        <EditText 
            android:id="@+id/two_pwd"
            android:paddingTop="5dp"
            android:maxLength="12"
            style="@style/login_edit_style"
            android:hint="@string/input_pwd_agin"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"/>
    </LinearLayout>
 -->
       <TextView 
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="30dp"
           android:id="@+id/regist"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/yellow_button_bg"/>

</LinearLayout>
