<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/attention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffeedd"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:paddingTop="3dp"
            android:text="@null"
            android:textColor="@color/theme"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/send_yan_to_phone"
            android:textColor="@color/huise"
            android:textSize="14sp" />
        <!--
   <LinearLayout 
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/phone_num"
            android:textSize="16sp"
            android:textColor="@color/fontcolor"
            android:gravity="center"/>
        <EditText 
            android:id="@+id/phone_num"
            android:maxLength="11"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:hint="@string/input_phone"
            style="@style/login_edit_style"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@null"/>
    </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/yanzhengma"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/yanzheng"
                style="@style/login_edit_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/input_code"
                android:inputType="number|textCapCharacters"
                android:maxLength="8" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/qianhui" />

            <com.kakao.kakaogift.view.YanZhengCodeTextView
                android:id="@+id/get_yanzheng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/get_code"
                android:textColor="@color/huise"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/set_pwd"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:src="@drawable/hmm_login_eye_close" />

            <ImageView
                android:id="@+id/clear_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/show_pwd"
                android:padding="3dp"
                android:src="@drawable/hmm_login_close"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/pwd"
                style="@style/login_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/clear_pwd"
                android:layout_toRightOf="@id/text1"
                android:background="@null"
                android:hint="@string/input_pwd_do"
                android:inputType="textPassword"
                android:maxLength="12" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/qianhui" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/besure_pwd"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/show_pwd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:src="@drawable/hmm_login_eye_close" />

            <ImageView
                android:id="@+id/clear_pwd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/show_pwd2"
                android:padding="3dp"
                android:src="@drawable/hmm_login_close"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/two_pwd"
                style="@style/login_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/clear_pwd2"
                android:layout_toRightOf="@id/text2"
                android:background="@null"
                android:hint="@string/input_pwd_agin"
                android:inputType="textPassword"
                android:maxLength="12" />
        </RelativeLayout>

        <TextView
            android:id="@+id/regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_theme_radius_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/agree_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_agree_us"
                android:textColor="@color/huise"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/yinsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/regist_agree_us02"
                android:textColor="@color/theme"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>