<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/attention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/notice"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:paddingTop="3dp"
            android:text="@null"
            android:textColor="@color/attention_color"
            android:textSize="12sp"
            android:visibility="invisible" 
            android:drawableLeft="@drawable/hmm_attention"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/send_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/send_yan_to_phone"
            android:textColor="@color/huise"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="15dp" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clear_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:padding="3dp"
                android:src="@drawable/hmm_login_close"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@id/clear_phone"
                android:layout_toRightOf="@id/text1"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/next"
            style="@style/submit_hui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="下一步"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/bom_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" >

            <TextView
                android:id="@+id/go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:text="@string/go_login"
                android:textColor="@color/yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/go_login"
                android:gravity="right"
                android:text="已有账号？"
                android:textColor="@color/huise"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>